[package]
name = "tango-replaytool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
mgba = { path = "../mgba" }
serde_json = "1"
tango-gamedb = { path = "../tango-gamedb" }
tango-pvp = { path = "../tango-pvp" }
tokio = { version = "1", features = ["full"] }
