[package]
name = "tango-rtc"
version = "0.1.0"
edition = "2021"

[dependencies]
futures.workspace = true
if-addrs = "0.15"
log.workspace = true
# rust-crypto only: keeps the whole WebRTC stack pure Rust (no OpenSSL),
# which is the point of this crate replacing the C libdatachannel stack.
str0m = { version = "0.21", default-features = false, features = ["rust-crypto"] }
stun = "0.17"
tokio = { workspace = true, features = ["full"] }
turn = "0.17"
webrtc-util = { version = "0.17", default-features = false, features = ["conn"] }

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["log"] }

[lints]
workspace = true
