[package]
name = "tango-rtc"
version = "0.1.0"
edition = "2021"

[dependencies]
futures.workspace = true
if-addrs = "0.15"
log.workspace = true
# tangobattle fork = upstream master + "sctp: apply reliability parameters
# to a DCEP-receiving in-band channel" (37b5744): without it, the DCEP-
# receiving side of every in-band channel sends ordered+reliable regardless
# of the declared config, head-of-line-blocking its frames behind every
# lost datagram (= the swingy in-match skew). Pin the fork until that fix
# is upstream. rust-crypto keeps DTLS off OpenSSL.
str0m = { git = "https://github.com/tangobattle/str0m", rev = "37b5744bbe099fe5c7367f9f6ccfbca51c99dff3", default-features = false, features = [
  "rust-crypto",
] }
stun = "0.17"
tokio = { workspace = true, features = ["full"] }
turn = "0.17"
webrtc-util = { version = "0.17", default-features = false, features = ["conn"] }

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["log"] }

[lints]
workspace = true
