[package]
name = "tango-rtc"
version = "0.1.0"
edition = "2021"

[dependencies]
futures.workspace = true
if-addrs = "0.15"
log.workspace = true
str0m = { git = "https://github.com/algesten/str0m", rev = "c1306cf432efd905e93c93353133f00f3369daae", default-features = false, features = [
  "rust-crypto",
] }
stun = "0.17"
tokio = { workspace = true, features = ["full"] }
turn = "0.17"
webrtc-util = { version = "0.17", default-features = false, features = ["conn"] }

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["log"] }

[lints]
workspace = true
