[package]
name = "tango-server"
version = "4.0.51"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
env_logger = "0.9.0"
log = "0.4"
futures-util = "0.3.21"
envconfig = "0.10.0"
tango-protos = { path = "../tango-protos" }
prost = "0.10"
bytes = "1.1.0"
hyper = "0.14"
hyper-tungstenite = "0.8"
routerify = "3.0"
tungstenite = "0.17"
async-trait = "0.1"
url = "2.2"
opentok-server = "0.1"
jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"
openssl-sys = { version = "0.9", features = ["vendored"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
