[package]
name = "tango-server"
version = "4.0.51"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
env_logger = "0.9"
envconfig = "0.10"
futures-util = "0.3"
hmac = "0.12"
hyper = "0.14"
hyper-tungstenite = "0.8"
jwt = "0.16"
log = "0.4"
openssl-sys = { version = "0.9", features = ["vendored"] }
opentok-server = "0.1"
prost = "0.10"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
routerify = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tango-protos = { path = "../tango-protos" }
tokio = { version = "1", features = ["full"] }
tungstenite = "0.17"
url = "2"
