[package]
name = "tango-signaling"
version = "0.1.0"
edition = "2021"

[features]
default = ["client"]
client = [
  "dep:tango-rtc",
  "dep:url",
  "dep:tokio-tungstenite",
  "dep:tokio",
  "dep:rand"
]
proto = []

[dependencies]
tango-rtc = { path = "../tango-rtc", optional = true }
futures = "0.3"
futures-util = "0.3"
http = "0.2"
log = "0.4"
prost = "0.14"
rand = { version = "0.8", optional = true }
thiserror = "1"
tokio = { version = "1", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.16", features = [
  "rustls-tls-webpki-roots"
], optional = true }
url = { version = "2", optional = true }

[build-dependencies]
prost-build = "0.14"

[lints]
workspace = true
