[package]
name = "tango-signaling"
version = "0.1.0"
edition = "2021"

[features]
default = ["client"]
client = [
  "dep:datachannel-wrapper",
  "dep:url",
  "dep:urlencoding",
  "dep:tokio-tungstenite",
  "dep:tokio",
  "dep:rand",
  "dep:rustls",
  "dep:webpki-roots"
]
proto = []

[dependencies]
datachannel-wrapper = { path = "../datachannel-wrapper", optional = true }
futures = "0.3"
futures-util = "0.3"
http = "0.2"
log = "0.4"
prost = "0.14"
rand = { version = "0.8", optional = true }
# Pinned to the same versions tokio-tungstenite 0.16 pulls (rustls 0.20,
# webpki-roots 0.22) so cargo unifies a single rustls in the graph — we
# build the client `ClientConfig` ourselves to attach the mTLS client
# certificate (see `client::build_tls_config`).
rustls = { version = "0.20", optional = true }
webpki-roots = { version = "0.22", optional = true }
thiserror = "1"
tokio = { version = "1", features = ["full"], optional = true }
tokio-tungstenite = { version = "0.16", features = [
  "rustls-tls-webpki-roots"
], optional = true }
url = { version = "2", optional = true }
urlencoding = { version = "2", optional = true }

[build-dependencies]
prost-build = "0.14"

[lints]
workspace = true
