[package]
name = "tango-web"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false
build = "build.rs"

# Two targets, one crate:
#  - wasm32 (the original): `dx serve` / `dx build`, dioxus-web in a
#    browser, platform layer on web APIs.
#  - native (desktop): plain `cargo run`, dioxus-native (Blitz, no
#    webview), platform layer on the desktop client's stack.
[dependencies]
# Engine + the shared tango crates. The mgba C core (and zstd's wasm
# shim) cross-compile with the wasi-sdk clang named by
# CC_wasm32_unknown_unknown; see .cargo/config.toml.
mgba.workspace = true
mgba-siolink.workspace = true

tango-net-protocol = { path = "../tango-net-protocol" }
tango-pvp = { path = "../tango-pvp" }
tango-dataview = { path = "../tango-dataview" }
tango-gamesupport = { path = "../tango-gamesupport" }
# The signaling schema only (prost types for tango.signaling.Packet);
# the crate's default `client` feature is the desktop's libdatachannel
# driver and never builds on wasm.
tango-signaling = { git = "https://github.com/tangobattle/tango-signaling", default-features = false, features = ["proto"] }
prost.workspace = true
bincode.workspace = true
# Lobby handshake: nonce + connection ids, commitment compare, reveal
# compression (zstd builds for wasm via the same wasi-sdk clang).
rand.workspace = true
rand_pcg.workspace = true
rennet.workspace = true
subtle = "2"
bps = { git = "https://github.com/tangobattle/bps" }
toml = "0.8"
sha2.workspace = true
serde-hex.workspace = true
semver.workspace = true
tango-gamesupport-bn1 = { path = "../gamesupport/tango-gamesupport-bn1", optional = true }
tango-gamesupport-bn2 = { path = "../gamesupport/tango-gamesupport-bn2", optional = true }
tango-gamesupport-bn3 = { path = "../gamesupport/tango-gamesupport-bn3", optional = true }
tango-gamesupport-bn4 = { path = "../gamesupport/tango-gamesupport-bn4", optional = true }
tango-gamesupport-bn5 = { path = "../gamesupport/tango-gamesupport-bn5", optional = true }
tango-gamesupport-bn6 = { path = "../gamesupport/tango-gamesupport-bn6", optional = true }
tango-gamesupport-exe45 = { path = "../gamesupport/tango-gamesupport-exe45", optional = true }

zstd.workspace = true
futures.workspace = true
web-time = "1"
crc32fast.workspace = true
log.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
bytemuck.workspace = true
# Game-name localization: the families' own Fluent fragments (same
# dedicated path as the desktop's library::game).
fluent-templates = "0.14"
unic-langid = { version = "0.9", features = ["likelysubtags"] }
# Game logos: the registry's decoded logo_image re-encodes to a PNG
# data URL for the <img> tag.
image = { workspace = true, features = ["png"] }
base64 = "0.22"
# Save view: the folder tab's group-by-chip collapse (same crate the
# desktop's save_view uses).
indexmap.workspace = true
# Patch READMEs render to HTML (the desktop renders the same markdown
# through iced's widget, which shares this parser).
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

dioxus = { version = "0.7" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { version = "0.7", features = ["web"] }
# The gamesupport crates use `rand`; on wasm32-unknown-unknown its
# getrandom backend needs the "js" feature turned on somewhere in the
# graph (feature unification does the rest).
getrandom = { version = "0.2", features = ["js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "MediaQueryList",
    "EventTarget",
    "HtmlAudioElement",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlMediaElement",
    "KeyboardEvent",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "Performance",
    "Navigator",
    "ServiceWorkerContainer",
    "Gamepad",
    "GamepadButton",
    "GamepadMappingType",
    "AudioContext",
    "AudioContextOptions",
    "AudioContextState",
    "BaseAudioContext",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioWorkletNodeOptions",
    "AudioNode",
    "AudioDestinationNode",
    "MessagePort",
    "MessageEvent",
    "Storage",
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetDirectoryOptions",
    "FileSystemGetFileOptions",
    "FileSystemRemoveOptions",
    "FileSystemWritableFileStream",
    "File",
    "Blob",
    "Response",
    "Url",
    "HtmlAnchorElement",
    "WebSocket",
    "BinaryType",
    "RtcPeerConnection",
    "RtcConfiguration",
    "RtcIceServer",
    "RtcIceTransportPolicy",
    "RtcDataChannel",
    "RtcDataChannelInit",
    "RtcDataChannelType",
    "RtcSessionDescription",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "RtcIceCandidateInit",
    "RtcIceCandidate",
    "RtcPeerConnectionIceEvent",
    "RtcPeerConnectionState",
    "BeforeUnloadEvent",
    "CanvasRenderingContext2d",
    "Clipboard",
    "CssStyleDeclaration",
    "Location",
    "UrlSearchParams",
] }
console_error_panic_hook = "0.1"
console_log = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "0.7", features = ["native"] }
# The custom-paint (emulator framebuffer) integration: `use_wgpu` +
# `CustomPaintSource` come from dioxus-native, and the paint code must
# use the same wgpu major that anyrender_vello composites with.
dioxus-native = { version = "0.7", features = ["autofocus"] }
# Clipboard (the browser backends use navigator.clipboard).
arboard = { version = "3", default-features = false }
# Replay export: the save dialog + encoder temp files (ffmpeg itself is
# found beside the exe or on PATH, like the desktop).
rfd = "0.15"
tempfile = "3"
wgpu = { version = "26", default-features = false }
env_logger = "0.11"
futures-timer = "3"
# Data-dir discovery (~/Documents/Tango, shared with the desktop app)
# and this app's own cache dir.
directories-next = "2"
# navigator.language's native counterpart.
sys-locale = "0.3"
# Local-time replay timestamps (the browser uses js Date).
chrono = "0.4"
# Audio + gamepads: the desktop client's SDL3 stack.
sdl3 = { version = "0.18", default-features = false, features = ["build-from-source-static"] }
send_wrapper = "0.6"
# Netplay transport: libdatachannel (the desktop client's stack) fills
# in for RTCPeerConnection, tokio-tungstenite for the signaling
# websocket. Same versions the desktop resolves so the graph unifies.
datachannel-wrapper = { git = "https://github.com/tangobattle/datachannel-wrapper" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net", "time", "macros"] }
tokio-tungstenite = { version = "0.16", features = ["rustls-tls-webpki-roots"] }
urlencoding = "2"
# Patch-repo sync (the browser uses fetch); same version/features shape
# as the desktop so the graph unifies.
reqwest = { version = "0.11", default-features = false, features = ["native-tls"] }

[features]
# Mirrors the tango bin crate: each game's support is an optional dep
# behind its own feature; `gamesupport-all` enables every game. Shipped
# builds pass `--features gamesupport-all`.
default = []
gamesupport-bn1 = ["dep:tango-gamesupport-bn1"]
gamesupport-bn2 = ["dep:tango-gamesupport-bn2"]
gamesupport-bn3 = ["dep:tango-gamesupport-bn3"]
gamesupport-bn4 = ["dep:tango-gamesupport-bn4"]
gamesupport-bn5 = ["dep:tango-gamesupport-bn5"]
gamesupport-bn6 = ["dep:tango-gamesupport-bn6"]
gamesupport-exe45 = ["dep:tango-gamesupport-exe45"]
gamesupport-all = [
    "gamesupport-bn1",
    "gamesupport-bn2",
    "gamesupport-bn3",
    "gamesupport-bn4",
    "gamesupport-bn5",
    "gamesupport-bn6",
    "gamesupport-exe45",
]

[lints]
workspace = true
