[package]
name = "tango"
version = "5.0.0-alpha.3"
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false
build = "build.rs"

[[bin]]
name = "tango"
path = "src/main.rs"

[build-dependencies]
# Windows-only: compiles resource.rc (taskbar icon + VERSIONINFO)
# into the exe. No-op on other targets via the cfg check in
# build.rs.
embed-resource = "1"

[dependencies]
iced = { version = "0.14", features = ["tokio", "image-without-codecs", "markdown", "canvas", "advanced"] }
# Used only for a tiny pre-iced adapter probe in `run_app`: we
# enumerate Backends::PRIMARY and auto-fall-back to ANGLE on
# Windows if no DX12/Vulkan adapter is present. Version pinned
# to match iced_wgpu 0.14's transitive `wgpu = "27.0"` so cargo
# can unify the crate. `default-features = false` because
# iced_wgpu already pulls in the default feature set
# (dx12/vulkan/metal/gles/wgsl); cargo unifies, so we don't need
# to re-list them here.
wgpu = { version = "27", default-features = false }
image = "0.25"
tiny-skia = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
semver = { version = "1", features = ["serde"] }
regex = "1"
mailparse = "0.14"
open = "5"
bps = { path = "../bps" }
mgba = { path = "../mgba" }
tango-pvp = { path = "../tango-pvp" }
tango-filesync = { path = "../tango-filesync" }
tango-signaling = { path = "../tango-signaling" }
datachannel-wrapper = { path = "../datachannel-wrapper" }
bincode = "1"
async-trait = "0.1"
gilrs = "0.10"
rfd = "0.14"
arboard = { version = "3", default-features = false, features = ["image-data"] }
# Auto-generated Rust bindings for the Lucide icon font. Gives us
# `Icon::Foo`, `char::from(Icon::Foo)`, and (with the iced feature)
# `LUCIDE_FONT_BYTES` so we don't have to maintain a hand-rolled
# codepoint table or vendor the ttf ourselves.
lucide-icons = { version = "1.16", features = ["iced"] }
# Netplay ready-handshake: rand for the nonce, sha3 for the
# Shake128 commitment, zstd for chunk compression, subtle for the
# constant-time commitment compare, rand_pcg for re-seeding the
# stepper's RNG from the XOR'd nonces.
rand = "0.8"
rand_pcg = { version = "0.3", features = ["serde1"] }
sha3 = "0.10"
zstd = "0.13"
subtle = "2"
cpal = "0.16"
bytemuck = "1"
thiserror = "1"
chrono = "0.4"
itertools = "0.13"
steamlocate = "2"
zip = "0.6"
reqwest = { version = "0.11", features = ["stream", "json", "native-tls"], default-features = false }
tokio = { version = "1", features = ["fs", "io-util", "time", "rt", "net", "sync", "macros"] }
tokio-util = { version = "0.7", features = ["io", "rt"] }
futures = "0.3"
fluent-templates = "0.8"
unic-langid = { version = "0.9", features = ["likelysubtags"] }
tango-gamedb = { path = "../tango-gamedb" }
tango-dataview = { path = "../tango-dataview" }
walkdir = "2"
directories-next = "2"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.9"
anyhow = "1"
# Cross-platform native crash catcher: POSIX signal handlers on
# Linux, a Mach exception server on macOS (needed for
# EXC_BAD_ACCESS), SetUnhandledExceptionFilter + a vectored
# handler on Windows. We install this in the child UI process so
# segfaults coming from mgba / datachannel C code land in the
# same log file as Rust panics.
#
# Note: crash-handler's Windows code path imports `_invoke_watson`
# from the MSVC CRT, which mingw-w64's libmsvcrt.a does not
# export. We define our own stub in `crash_log.rs` under
# `cfg(all(windows, target_env = "gnu"))` to satisfy the
# cross-compile link.
crash-handler = "0.6"
indexmap = "2"
clap = { version = "4", features = ["derive"] }
# Software upscale filters for the emulator framebuffer. Match
# the legacy crates pinned in tango/Cargo.toml.
hqx = { path = "../hqx" }
mmpx = { path = "../mmpx" }
# Discord rich-presence IPC client (ported from legacy
# tango/src/discord). byteorder + bytes for the framing layer,
# num-derive/num-traits for the opcode enum, serde-hex for the
# request-nonce serialization. Tokio "net" pulls in the
# UnixStream + named-pipe transports.
byteorder = "1"
bytes = "1"
num-derive = "0.4"
num-traits = "0.2"
serde-hex = "0.1"

[lints]
workspace = true
