[package]
name = "tango"
version = "5.0.51"
edition = "2021"
license = "MPL-2.0"
publish = false
build = "build.rs"

[[bin]]
name = "tango"
path = "src/main.rs"

[build-dependencies]
# Windows-only: compiles resource.rc (taskbar icon + VERSIONINFO)
# into the exe. No-op on other targets via the cfg check in
# build.rs.
embed-resource = "1"

[dependencies]
iced = { version = "0.14", features = ["tokio", "image-without-codecs", "markdown", "canvas", "advanced"] }
# Drop-in replacement widgets that extend iced 0.14's stock ones.
# We use sweeten's `pick_list` for its `.disabled()` closure so the
# ROM dropdown can grey out games we don't have a ROM for instead
# of jamming a "file-x" glyph into the label string.
sweeten = "0.14"
# Used only for a tiny pre-iced adapter probe in `run_app`: we
# enumerate Backends::PRIMARY and auto-fall-back to ANGLE on
# Windows if no DX12/Vulkan adapter is present. Version pinned
# to match iced_wgpu 0.14's transitive `wgpu = "27.0"` so cargo
# can unify the crate. `default-features = false` because
# iced_wgpu already pulls in the default feature set
# (dx12/vulkan/metal/gles/wgsl); cargo unifies, so we don't need
# to re-list them here.
wgpu = { version = "27", default-features = false }
image = { workspace = true, default-features = true }
tiny-skia = "0.11"
# Direct handles to iced's graphics layer + software renderer so the baked
# NaviCust image (viewer / clipboard) is rasterized through the SAME canvas
# drawing routine as the live editor — one render path, no hand-rolled
# tiny-skia. Pinned to iced 0.14's versions (unified via Cargo.lock).
iced_graphics = { version = "0.14", features = ["geometry"] }
iced_tiny_skia = { version = "0.14", features = ["geometry"] }
serde.workspace = true
serde_json.workspace = true
toml = "0.8"
semver = { version = "1", features = ["serde"] }
regex = "1"
mailparse = "0.14"
open = "5"
bps = { path = "../bps" }
discord-ipc = { path = "../discord-ipc" }
mgba = { path = "../mgba" }
rennet = { path = "../rennet" }
tango-pvp = { path = "../tango-pvp" }
tango-filesync = { path = "../tango-filesync" }
tango-signaling = { path = "../tango-signaling" }
datachannel-wrapper = { path = "../datachannel-wrapper" }
bincode = "1"
async-trait.workspace = true
sdl3 = { version = "0.18", default-features = false, features = ["build-from-source-static"] }
# Lets the `!Send` SDL handles (Sdl, EventPump, GamepadSubsystem) live in
# `Send` globals: SendWrapper is Send + Sync but panics if the inner value
# is dereferenced (or dropped) from any thread other than the one that
# created it — exactly the main-thread-only guarantee SDL3 needs, so we
# don't have to hand-roll an `unsafe impl Send` + thread-id check.
send_wrapper = "0.6"
rfd = "0.14"
arboard = { version = "3", default-features = false, features = ["image-data"] }
# Auto-generated Rust bindings for the Lucide icon font. Gives us
# `Icon::Foo`, `char::from(Icon::Foo)`, and (with the iced feature)
# `LUCIDE_FONT_BYTES` so we don't have to maintain a hand-rolled
# codepoint table or vendor the ttf ourselves.
lucide-icons = { version = "1.16", features = ["iced"] }
# Netplay ready-handshake: rand for the nonce, sha3 for the
# Shake128 commitment, zstd for chunk compression, subtle for the
# constant-time commitment compare, rand_pcg for re-seeding the
# stepper's RNG from the XOR'd nonces.
rand.workspace = true
rand_pcg.workspace = true
sha3 = "0.10"
zstd.workspace = true
subtle = "2"
# Persistent client identity (`identity.rs`): a self-signed certificate kept
# in the config dir and presented as the matchmaking websocket's mTLS client
# cert. rcgen mints it, rustls-pemfile reads it back from the PEM on disk as
# the DER `tango_signaling::ClientIdentity` wants, sha2 derives the SHA-256
# fingerprint we log. rcgen pinned to the rustls-0.20-era release so it reuses
# the ring 0.16 build already in the graph.
rcgen = "0.11"
rustls-pemfile = "1"
sha2.workspace = true
bytemuck.workspace = true
thiserror.workspace = true
chrono = "0.4"
itertools.workspace = true
steamlocate = "2"
zip = "2"
reqwest = { version = "0.11", features = ["stream", "json", "native-tls"], default-features = false }
tokio = { workspace = true, features = ["fs", "io-util", "time", "rt", "net", "sync", "macros"] }
tokio-util = { workspace = true, features = ["io", "rt"] }
futures.workspace = true
fluent-templates = "0.14"
unic-langid = { version = "0.9", features = ["likelysubtags"] }
tango-gamesupport = { path = "../tango-gamesupport" }
tango-gamesupport-bn1 = { path = "../gamesupport/tango-gamesupport-bn1", optional = true }
tango-gamesupport-bn2 = { path = "../gamesupport/tango-gamesupport-bn2", optional = true }
tango-gamesupport-bn3 = { path = "../gamesupport/tango-gamesupport-bn3", optional = true }
tango-gamesupport-bn4 = { path = "../gamesupport/tango-gamesupport-bn4", optional = true }
tango-gamesupport-bn5 = { path = "../gamesupport/tango-gamesupport-bn5", optional = true }
tango-gamesupport-bn6 = { path = "../gamesupport/tango-gamesupport-bn6", optional = true }
tango-gamesupport-exe45 = { path = "../gamesupport/tango-gamesupport-exe45", optional = true }
tango-dataview = { path = "../tango-dataview" }
walkdir = "2"
directories-next = "2"
log.workspace = true
env_logger = "0.9"
anyhow.workspace = true
# Cross-platform native crash catcher: POSIX signal handlers on
# Linux, a Mach exception server on macOS (needed for
# EXC_BAD_ACCESS), SetUnhandledExceptionFilter + a vectored handler
# on Windows. Installed in the child UI process so segfaults from
# mgba / datachannel / wgpu C code are caught.
crash-handler = "0.6"
# Out-of-process minidump writing + IPC. The child's crash handler
# only ships the crash context over this channel; the supervisor
# writes the `.dmp` by reading the suspended child. Unifies on
# crash-context 0.6.3 with crash-handler, and self-links dbghelp on
# Windows (no extra link config).
minidumper = "0.8"
# For an async-signal-safe raw write(2) from the crash handler's
# no-server fallback path — `std::io::stderr().lock()` (a lock) and
# `format!` (an allocation) are both unusable in a signal/exception
# handler. `libc::write` maps to the CRT `_write` on Windows too.
libc = "0.2"
# Stack-allocated string for formatting the crash summary in the handler
# without heap allocation (see crash_log.rs).
arrayvec = "0.7"
indexmap = "2"
clap = { version = "4", features = ["derive"] }

[features]
# Each game's support (dataview + PvP hooks + saves + logos) is an
# optional dependency gated behind its own feature. No games are
# compiled in by default; `gamesupport-all` enables every game. Shipped
# builds pass `--features gamesupport-all`.
default = []
gamesupport-bn1 = ["dep:tango-gamesupport-bn1"]
gamesupport-bn2 = ["dep:tango-gamesupport-bn2"]
gamesupport-bn3 = ["dep:tango-gamesupport-bn3"]
gamesupport-bn4 = ["dep:tango-gamesupport-bn4"]
gamesupport-bn5 = ["dep:tango-gamesupport-bn5"]
gamesupport-bn6 = ["dep:tango-gamesupport-bn6"]
gamesupport-exe45 = ["dep:tango-gamesupport-exe45"]
gamesupport-all = [
    "gamesupport-bn1",
    "gamesupport-bn2",
    "gamesupport-bn3",
    "gamesupport-bn4",
    "gamesupport-bn5",
    "gamesupport-bn6",
    "gamesupport-exe45",
]

[lints]
workspace = true

# Reveal-in-file-manager for the RevealPath effects. Not used on macOS:
# its 0.1.1 backend double-autoreleases and crashes there (see
# `app::reveal_path`, which shells out to `open -R` instead).
[target.'cfg(not(target_os = "macos"))'.dependencies]
showfile = "0.1.1"
