[package]
name = "glowfb"
authors = ["bigfarts <bigfarts@punymail.com>"]
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"
description = "Simple pixel framebuffer for OpenGL 2.1+"
keywords = ["opengl", "windowing", "framebuffer", "window"]
categories = ["rendering"]
readme = "README.md"

[dependencies]
glow = "0.11"
glutin = "0.28.0"
log = "0.4"
